add game update action
