# app/Http/Requests/Admin/GameUpdateRequest.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Http\Requests\Admin;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class GameUpdateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'platform' => 'required|exists:platforms,slug',
+            'title' => 'required',
+            'description' => 'required',
+            'rom' => 'sometimes|file',
+            'images.*' => 'sometimes|image',
+        ];
+    }
+}
